improve(box-example) added box-example

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,5 +3,6 @@
 
 statping_version: "0.80.51"
 statping_arch: "linux-x64" #linux-arm6
+statping_install_dir: /opt/statping
 statping_user: statping
 statping_group: statping
