--- a/tasks/tasks_statping.yml
+++ b/tasks/tasks_statping.yml
@@ -55,7 +55,7 @@
       - statping
 
   - name: Statping | Template startup script
-    template: src="{{role_dir}}/templates/statping.systemd.j2" dest="/etc/systemd/system/statping.service"
+    template: src="{{ role_path }}/templates/statping.systemd.j2" dest="/etc/systemd/system/statping.service"
     when: ansible_service_mgr == "systemd" and statping_exists is failed
     become: yes
     tags:
@@ -69,14 +69,14 @@
       ignore_errors: true
 
     - name: Statping | Template startup script
-      template: src="{{role_dir}}/templates/statping.amzn.j2" dest="/etc/init/statping.conf"
+      template: src="{{ role_path }}/templates/statping.amzn.j2" dest="/etc/init/statping.conf"
       when: startstop_exists is failed 
       become: yes
       tags:
         - statping
 
     - name: Statping | Template startup script
-      template: src="{{role_dir}}/templates/statping.upstart.j2" dest="/etc/init/statping.conf"
+      template: src="{{ role_path }}/templates/statping.upstart.j2" dest="/etc/init/statping.conf"
       when: startstop_exists is failed 
       become: yes
       tags:
