--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,3 +6,4 @@ statping_arch: "linux-x64" #linux-arm6
 statping_install_dir: /opt/statping
 statping_user: statping
 statping_group: statping
+statping_port: 8787
