--- a/box-example/requirements.yml
+++ b/box-example/requirements.yml
@@ -1,2 +1,10 @@
 - src: softasap.sa-statping
   name: sa-statping
+- src: softasap.sa-nginx
+  name: sa-nginx
+- src: softasap.sa-acme-sh
+  name: sa-acme-sh
+- src: softasap.sa-php-fpm
+  name: sa-php-fpm
+- src: softasap.sa-include
+  name: sa-include
