--- a/.travis.yml
+++ b/.travis.yml
@@ -42,11 +42,11 @@ env:
    init='/usr/sbin/init'
    run_opts='--security-opt seccomp=unconfined --tmpfs /run --tmpfs /run/lock -v /sys/fs/cgroup:/sys/fs/cgroup:ro'
    playbook='test.yml'
- - distribution='centos'
-   version='6'
-   init='/sbin/init'
-   run_opts=''
-   playbook='test.yml'
+# - distribution='centos'
+#   version='6'
+#   init='/sbin/init'
+#   run_opts=''
+#   playbook='test.yml'
  - distribution='centos'
    version='7'
    init='/usr/lib/systemd/systemd'
